# mauro

./: .gitmodules  CMakeLists.txt  README.md
ext/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: MCommon.h  MConfig.h  MPlotter.h  MWindow.h  MWindowManager.h
lib/src/: MPlotter.cpp  MWindow.cpp  MWindowManager.cpp
tests/: CMakeLists.txt  testWindows.cpp
