
message( "MAURO> CONFIGURING TESTS" )

include_directories( ${MAURO_INCLUDE_DIRECTORIES} )

## Configure tests *******************************************

function( MauroFnBuildTest pSources pExecutableId )

    add_executable( ${pExecutableId}
                    ${pSources} )

    target_link_libraries( ${pExecutableId}
                           mauro )
    
endfunction()

set( MauroTestsSources
     testWindows.cpp )

message( "mauro tests: ${MauroTestsSources}" )

foreach( testFile ${MauroTestsSources} )

    string( REPLACE ".cpp" ""  executableId ${testFile} )
    get_filename_component( execId ${executableId} NAME )

    # message( "fileId: ${testFile}" )
    # message( "fullPathExecutableID: ${executableId}" )
    # message( "executableId: ${execId}")

    MauroFnBuildTest( ${testFile} ${execId} )

endforeach( testFile )